--- a/THANKS
+++ b/THANKS
@@ -42,6 +42,7 @@ Marco Maggi <marco.maggi-ipsu@poste.it>
 "carlo.bramix" <carlo.bramix@libero.it>
 Marc Santamaria <asgarath@gmail.com>
 Wim Lewis <wiml@hhhh.org>
+Phil Pennock <gsasl-phil@spodhuis.org>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
