--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.7.2 (unreleased) [alpha]
+* Version 1.7.2 (released 2012-03-28) [alpha]
 
 ** gsasl: The client lets the server decide when authentication is complete.
 Before the client quit from the authentication loop when the local
