--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,11 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 1.7.4 (unreleased) [alpha]
+
+** Doc fixes and updates for the callback/property change in the library.
+See lib/NEWS for details.  This affects SAML and OpenID.
+
 * Version 1.7.3 (released 2012-04-03) [alpha]
 
 ** The SAML20 mechanism has been updated and is now enabled by default.
