--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.7.4 (unreleased) [alpha]
+* Version 1.7.4 (released 2012-05-16) [alpha]
 
 ** Doc fixes and updates for the callback/property change in the library.
 See lib/NEWS for details.  This affects SAML and OpenID.
