--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002-2012 Simon Josefsson
 See the end for copying conditions.
 
-* Version 1.7.4 (unreleased) [alpha]
+* Version 1.7.4 (released 2012-05-16) [alpha]
 
 ** libgsasl: Reverted unification of OpenID and SAML properties/callbacks.
 The reason was that client and servers needs to know whether it is
