--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,11 +2,19 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002-2012 Simon Josefsson
 See the end for copying conditions.
 
+* Version 1.7.6 (unreleased) [beta]
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 1.7.5 (released 2012-05-22) [beta]
 
 ** i18n: Updated translations.
 
 ** Build fixes.
+
+** API and ABI modifications.
+No changes since last version.
 
 * Version 1.7.4 (released 2012-05-16) [alpha]
 
