Fix texinfo warning.

--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -1396,7 +1396,7 @@ to respond to a certain property, simply return
 @code{GSASL_NO_CALLBACK}.  The basic properties to support are
 authentication identity (@code{GSASL_AUTHID}), authorization identity
 (@code{GSASL_AUTHZID}), and password (@code{GSASL_PASSWORD}).
-@xref{Properties} for the list of all properties, and what your callback
+@xref{Properties}, for the list of all properties, and what your callback
 should (ideally) do for them, and which properties each mechanism
 require in order to work.
 
@@ -1414,7 +1414,7 @@ value the application has not yet provided, this is handled through a
 callback.  The application provides a callback, using
 @code{gsasl_callback_set}, which will be invoked with a property
 parameter.  The callback should set the property before returning, or
-fail.  @xref{Callback Functions} for more information.
+fail.  @xref{Callback Functions}, for more information.
 
 There are two kind of properties.  The first, a ``data property'' is
 the simplest to understand because it normally refers to short
