--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.7.6 (unreleased) [beta]
 
+** Build fixes.
+
 * Version 1.7.5 (released 2012-05-22) [beta]
 
 ** i18n: Updated translations.
