--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002-2012 Simon Josefsson
 See the end for copying conditions.
 
-* Version 1.7.6 (unreleased) [beta]
+* Version 1.7.6 (released 2012-05-23) [beta]
 
 ** i18n: Updated translations.
 
