--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.8.0 (unreleased) [stable]
+* Version 1.8.0 (released 2012-05-28) [stable]
 
 ** This is a new major stable release.  Brief changes compared to 1.6.x:
 
